---
source: sql-tests/tests/tests.rs
expression: query_result
---
 plan 
------
 1..4
(1 row)

                       is                        
-------------------------------------------------
 ok 1 - default metric chunk interval is 8 hours
(1 row)

 set_default_chunk_interval 
----------------------------
 t
(1 row)

                       is                       
------------------------------------------------
 ok 2 - default metric chunk interval is 1 hour
(1 row)

 get_or_create_metric_table_name 
---------------------------------
 (1,cpu_usage,t)
(1 row)

                               is                                
-----------------------------------------------------------------
 ok 3 - get_metric_chunk_interval returns default chunk interval
(1 row)

 set_metric_chunk_interval 
---------------------------
 t
(1 row)

                        approx_is                        
---------------------------------------------------------
 ok 4 - get_metric_chunk_interval returns chunk interval
(1 row)

 finish 
--------
(0 rows)


